--- a/src/components/Contenido2.astro
+++ b/src/components/Contenido2.astro
@@ -43,7 +43,7 @@
       width: 800px !important;
       height: 800px !important;
       margin-top: -20px !important;
-      margin-left: -250px !important;
+      margin-left: -120px !important;
     }
     button {
       background-color: #3e7edd !important;
@@ -71,7 +71,7 @@
       height: 60px !important;
     }
     .contenedor-information {
-      width: 80% !important;
+      width: 90% !important;
       justify-content: center !important;
       margin: 0 auto !important;
     }
@@ -113,9 +113,19 @@
      h4{
       font-size: 1.2rem !important;
      }
+     .container-informacion{
+      width: 100%;
+      padding: 20px;
+     }
      .img-icon{
       height: 40px !important;
       width: 40px !important;
+     }
+     .contenedor-texto{
+      width: 100%;
+      padding: 0px;
+      
+
      }
     }
   </style>
