--- a/src/components/CardEM.astro
+++ b/src/components/CardEM.astro
@@ -22,10 +22,11 @@ const { Data, title, img } = Astro.props;
 <style>
     .contenedor { /* Corregido aquí */
         width: 250px;
+        height: 350px;
         margin: 0 auto;
-        outline: 2px solid black;
+        outline: 0.5px solid black;
         border-radius: 25px;
-        padding: 20px;
+        padding: 15px;
         border-bottom-right-radius: 80px;
         margin-bottom: 10px;
         margin-top: 20px;
@@ -35,7 +36,7 @@ const { Data, title, img } = Astro.props;
         transform: translateY(-10px);
     }
     .container-img {
-        height: 100%;
+        height: 80%;
         width: 100%;
         overflow: hidden;
 
