--- a/src/components/Organ.astro
+++ b/src/components/Organ.astro
@@ -128,17 +128,30 @@
         width: 40px;
       }
       .p-icon {
-        font-size: 1.2rem;
+        font-size: 0.5rem;
+        text-wrap: balance;
+        text-align: center;
+        text-justify: inter-word;
+        margin-top: 10px;
+        color: gainsboro;
+
       }
       .contenedor-items > div {
         flex: 0 0 50%;
         max-width: 30%;
       }
       .container-fluid .row .col-md-6 {
-        height: 100dvh;
+        height: 70dvh;
       }
       .counter{
         font-size: 1.2rem;
+      }
+      h4{
+        font-size: 1.3rem;
+      
+      }
+      p{
+        font-size: 0.8rem;
       }
     }
   </style>
