--- a/src/components/Slider.css
+++ b/src/components/Slider.css
@@ -28,3 +28,11 @@
     margin-left: auto;
     margin-right: auto;
   }
+
+  @media (max-width: 412px){
+    .swiper-slide img {
+      width: 150px;
+      height: 100px;
+    }
+    
+  }
