--- a/src/components/Carousel.astro
+++ b/src/components/Carousel.astro
@@ -20,7 +20,7 @@
 
       <div class="carousel-item" data-bs-interval="2000">
        
-        <img src="public/instrumentacion-industrial-medicion-control.gif" class="d-block w-100" alt="...">
+        <img src="/instrumentacion-industrial-medicion-control.gif" class="d-block w-100" alt="...">
         <div class="filter carousel-caption d-none d-md-block">
           <div class="contenedor-texto">
             <h3>Visión</h3>
@@ -33,7 +33,7 @@
 
       <div class="carousel-item">
        
-        <img src="public/LLAVESMEC.webp" class="d-block w-100" alt="...">
+        <img src="/LLAVESMEC.webp" class="d-block w-100" alt="...">
         <div class="filter carousel-caption d-none d-md-block">
           <div class="contenedor-texto">
             <h3>Objetivo</h3>
