--- a/src/components/Contenido.astro
+++ b/src/components/Contenido.astro
@@ -2,7 +2,7 @@
     <div class="container-fluid">
       <div class="row container-fluid contenedor-information">
         <div class="col-md-12 col-lg-4">
-         <img src="public/MARTILLOPETROLERO.gif" class="balancin" alt="" />
+         <img src="/MARTILLOPETROLERO.gif" class="balancin" alt="" />
         </div>
   
         <div class="col-md-12 col-lg-8 container-informacion">
