--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -5,34 +5,34 @@ const today = new Date();
 <footer>
 
 	&copy; {today.getFullYear()} PrestaServis RL. <br>
-	 All rights reserved.
+	 Todos los derechos reservados.
 	<div class="social-links">
 		<div class="logo1">
 			<a href="" target="_blank">
 				<span class="sr-only"></span>
-				<img src="public/PRESTASERVIS-BLUE.png" alt="">
+				<img src="/PRESTASERVIS-BLUE.png" alt="">
 			</a>
 		</div>
 		<a href="" target="_blank">
 			<span class="sr-only">Contacatnos Via Whatsapp</span>
-			<img src="public/ws.png" alt="Escribenos por Whatsapp"  width="32px" height="32px">
+			<img src="/ws.png" alt="Escribenos por Whatsapp"  width="32px" height="32px">
 		</a>
 		<a href="" target="_blank">
 			<span class="sr-only">Siguenos en Instagram</span>
-			<img src="public/instagram.png" alt="Siguenos en Instagram"  width="32px" height="32px">
+			<img src="/instagram.png" alt="Siguenos en Instagram"  width="32px" height="32px">
 		</a>
 		<a href="" target="_blank">
 			<span class="sr-only">Siguenos en Twitter</span>
-			<img src="public/x.png" alt="perfil X" width="32px" height="32px">
+			<img src="/x.png" alt="perfil X" width="32px" height="32px">
 		</a>
 		<a href="" target="_blank">
 			<span class="sr-only">Siguenos en Instagram</span>
-			<img src="public/linkedin.png" alt="perfil linkedin"  width="32px" height="32px">
+			<img src="/linkedin.png" alt="perfil linkedin"  width="32px" height="32px">
 		</a>
 		<div class="logo2">
 			<a href="" target="_blank">
 				<span class="sr-only"></span>
-				<img src="public/PRESTASERVISRL-RED.png" alt="">
+				<img src="/PRESTASERVISRL-RED.png" alt="">
 			</a>
 		</div>
 	</div>
