--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -8,7 +8,7 @@ import { SITE_TITLE } from "../consts";
     <div class="contenedor container-logo">
       <h2>
         <a href="/"
-          ><img src="public/PRESTASERVIS-BLUE.png" class="logoIMG" /></a>
+          ><img src="/PRESTASERVIS-BLUE.png" class="logoIMG" /></a>
       </h2>
     </div>
 
@@ -27,7 +27,7 @@ import { SITE_TITLE } from "../consts";
     </div>
     <div class="social-links">
       <a href="" target="_blank">
-        <img src="public/PRESTASERVISRL-RED.png" class="LogoIMG2" />
+        <img src="/PRESTASERVISRL-RED.png" class="LogoIMG2" />
       </a>
     </div>
   </nav>
@@ -36,7 +36,7 @@ import { SITE_TITLE } from "../consts";
   <div
     id="intro-example"
     class="p-5 text-center bg-image backgroundimg"
-    style="background-image: url('public/Captura de pantalla 2024-04-07 201533.png');"
+    style="background-image: url('/Captura de pantalla 2024-04-07 201533.png');"
   >
     <div class="mask" style="background-color: rgba(0, 0, 0, 0.5);">
       <div class="d-flex justify-content-center align-items-center h-100">
@@ -61,7 +61,7 @@ import { SITE_TITLE } from "../consts";
           <a
             data-mdb-ripple-init
             class="btn btn-outline-light btn-lg m-2"
-            href="public/Brouchere PRESTASERVIS RL, COOP y C.A..pdf"
+            href="/Brouchere PRESTASERVIS RL, COOP y C.A..pdf"
             target="_blank"
             role="button"
             >Descarga nuestra presentacion y Catalogo de servicios
@@ -180,7 +180,9 @@ import { SITE_TITLE } from "../consts";
 
 	}
   }
-
+  a{
+    font-size: 0.5rem;
+  }
   @media (max-width: 412px) {
     .internal-links {
       display: none;
