--- a/src/components/Organ.astro
+++ b/src/components/Organ.astro
@@ -15,21 +15,21 @@
         <div class="row contenedor-items">
           <div class="col-md-4 contenedor-elemento">
             <div class="contenedor-img">
-              <img src="public/maquina.png" class="icon-footer" alt="" />
+              <img src="/maquina.png" class="icon-footer" alt="" />
               <p class="p-icon">Equipos y Maquinarias Operativos a disposicion de la prestacion de servicios</p>
               <h5 class="counter" id="counter0"></h5>
             </div>
           </div>
           <div class="col-md-4 contenedor-elemento">
             <div class="contenedor-img">
-              <img src="public/areaoperac.png" class="icon-footer" alt="" />
+              <img src="/areaoperac.png" class="icon-footer" alt="" />
               <p class="p-icon">Areas Operacionales de Primera Calidad</p>
               <h5 class="counter" id="counter2"></h5>
             </div>
           </div>
           <div class="col-md-4 contenedor-elemento">
             <div class="contenedor-img">
-              <img src="public/factory-male-worker-upper-body-svgrepo-com.svg" class="icon-footer" alt="" />
+              <img src="/factory-male-worker-upper-body-svgrepo-com.svg" class="icon-footer" alt="" />
               <p class="p-icon">Trabajadores Ampliamente experimentados</p>
               <h5 class="counter" id="counter3"></h5>
             </div>
@@ -37,7 +37,7 @@
         </div>
       </div>
 
-      <div class="col-md-6" style="background-image: url('public/EQUIPOS DE LA EMPRESA(2).png'); background-repeat: repeat;">
+      <div class="col-md-6" style="background-image: url('/EQUIPOS DE LA EMPRESA(2).png'); background-repeat: repeat;">
       </div>
       
 
