--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -8,7 +8,7 @@ import Footer from '../components/Footer.astro';
 	title="Acerca de Prestaservis RL"
 	description="sisa"
 	pubDate={new Date('Marzo 29 2024')}
-	heroImage="/public/servicios (1).png"
+	heroImage="/servicios (1).png"
 >
 <h2>
 	¿Quienes Somos?
