--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -51,7 +51,7 @@ import Contenido2 from '../components/Contenido2.astro';
     <div class="col-sm-6">
       <div class="container">
         <Card
-          img="public/serv/servicios (10).png"
+          img="/serv/servicios (10).png"
           Data=""
           title="Tendido y Empalme de fibra optica"
         />
@@ -60,7 +60,7 @@ import Contenido2 from '../components/Contenido2.astro';
     <div class="col-sm-6">
       <div class="container">
         <Card
-          img="public/serv/servicios (12).png"
+          img="/serv/servicios (12).png"
           Data=""
           title="Calibraciones de instrumentos y pruebas de lazo"
         />
@@ -69,7 +69,7 @@ import Contenido2 from '../components/Contenido2.astro';
     <div class="col-sm-6">
       <div class="container">
         <Card
-          img="public/serv/servicios (5).png"
+          img="/serv/servicios (5).png"
           Data=""
           title="Servicio de mantenimientos de valvulas de control y seguridad"
         />
@@ -83,7 +83,7 @@ import Contenido2 from '../components/Contenido2.astro';
     <div class="col-sm">
       <div class="container">
         <Card
-          img="public/serv/servicios (4).png"
+          img="/serv/servicios (4).png"
           Data=""
           title="Mantenimiento de motores electricos y bombas sumergibles"
         />
@@ -92,7 +92,7 @@ import Contenido2 from '../components/Contenido2.astro';
     <div class="col-sm">
       <div class="container">
         <Card
-          img="public/serv/servicios (11).png"
+          img="/serv/servicios (11).png"
           Data=""
           title="Mantenimiento de transformadores y subestaciones electricas"
         />
@@ -101,7 +101,7 @@ import Contenido2 from '../components/Contenido2.astro';
     <div class="col-sm">
       <div class="container">
         <Card
-          img="public/serv/servicios (6).png"
+          img="/serv/servicios (6).png"
           Data=""
           title="Soldaduras Especiales y Trabajos de soldadura en tuberias"
         />
@@ -115,7 +115,7 @@ import Contenido2 from '../components/Contenido2.astro';
     <div class="col-sm">
       <div class="container">
         <Card
-          img="public/serv/servicios (7).png"
+          img="/serv/servicios (7).png"
           Data=""
           title="Construccion de obras civiles y mecanicas"
         />
@@ -124,7 +124,7 @@ import Contenido2 from '../components/Contenido2.astro';
     <div class="col-sm">
       <div class="container">
         <Card
-          img="public/serv/servicios (9).png"
+          img="/serv/servicios (9).png"
           Data=""
           title="Mantenimiento preventivo y correctivo de equipos"
         />
@@ -134,7 +134,7 @@ import Contenido2 from '../components/Contenido2.astro';
       <div class="container">
         <Card
 
-          img="public/serv/servicios (8).png"
+          img="/serv/servicios (8).png"
           Data=""
           title="Proyectos, Diseño y realizacion de trabajos electricos en alta y baja tension"
         />
@@ -151,7 +151,7 @@ import Contenido2 from '../components/Contenido2.astro';
     <div class="col-sm">
       <div class="container">
         <Card
-          img="public/serv/servicios (13).png"
+          img="/serv/servicios (13).png"
           Data=""
           title="Calibracion y valvulas de seguridad"
         />
