--- a/src/pages/service/index.astro
+++ b/src/pages/service/index.astro
@@ -94,23 +94,23 @@ import FormattedDate from '../../components/FormattedDate.astro';
 
 							<li>
 								<div class="titulo">
-									<img width={720} height={360} src="public/serv/servicios (1).png" alt="" />
+									<img width={720} height={360} src="/serv/servicios (1).png" alt="" />
 									<h4 class="title">Servicios que ofrece PrestaServis RL</h4>
 									<p class="date">
 										
 									</p></div>
 									
-									<img width={720} height={360} src="public/serv/servicios (2).png" alt="" />
-									<img width={720} height={360} src="public/serv/servicios (4).png" alt="" />
-									<img width={720} height={360} src="public/serv/servicios (5).png" alt="" />
-									<img width={720} height={360} src="public/serv/servicios (6).png" alt="" />
-									<img width={720} height={360} src="public/serv/servicios (7).png" alt="" />
-									<img width={720} height={360} src="public/serv/servicios (8).png" alt="" />
-									<img width={720} height={360} src="public/serv/servicios (9).png" alt="" />
-									<img width={720} height={360} src="public/serv/servicios (10).png" alt="" />
-									<img width={720} height={360} src="public/serv/servicios (11).png" alt="" />
-									<img width={720} height={360} src="public/serv/servicios (12).png" alt="" />
-									<img width={720} height={360} src="public/serv/servicios (13).png" alt="" />
+									<img width={720} height={360} src="/serv/servicios (2).png" alt="" />
+									<img width={720} height={360} src="/serv/servicios (4).png" alt="" />
+									<img width={720} height={360} src="/serv/servicios (5).png" alt="" />
+									<img width={720} height={360} src="/serv/servicios (6).png" alt="" />
+									<img width={720} height={360} src="/serv/servicios (7).png" alt="" />
+									<img width={720} height={360} src="/serv/servicios (8).png" alt="" />
+									<img width={720} height={360} src="/serv/servicios (9).png" alt="" />
+									<img width={720} height={360} src="/serv/servicios (10).png" alt="" />
+									<img width={720} height={360} src="/serv/servicios (11).png" alt="" />
+									<img width={720} height={360} src="/serv/servicios (12).png" alt="" />
+									<img width={720} height={360} src="/serv/servicios (13).png" alt="" />
 							</li>
 						
 					
