--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -94,7 +94,7 @@ const posts = (await getCollection('blog')).sort(
 			<section>
 				<li>
 					<div class="titulo">
-						<img width={1000} height={360} src="public/serv/servicios (1).png" alt="" />
+						<img width={1000} height={360} src="/serv/servicios (1).png" alt="" />
 						<h4 class="title text-center">
 							Proyectos Ejecutados Por PRESTASERVIS RL
 						</h4>
